--- a/analyse_exploratoire_et_stat_desc.ipynb
+++ b/analyse_exploratoire_et_stat_desc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,14 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_io.StringIO object at 0x7f6e8c564a00>\n",
+      "<_io.StringIO object at 0x7f3934c977c0>\n",
       "         id            nom  posteOuvert  typePoste       lon        lat  alt  \\\n",
       "0  91027002           ORLY         True          0  2.397000  48.718000   86   \n",
       "1  91069001    BOIGNEVILLE        False          2  2.381167  48.325500  115   \n",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_4fa727915a2331dbff37a83c649441d0 {\n",
+       "                #map_f8eed7972ffd2ac87ddf3fc007508f48 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -222,14 +222,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_4fa727915a2331dbff37a83c649441d0&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_f8eed7972ffd2ac87ddf3fc007508f48&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_4fa727915a2331dbff37a83c649441d0 = L.map(\n",
-       "                &quot;map_4fa727915a2331dbff37a83c649441d0&quot;,\n",
+       "            var map_f8eed7972ffd2ac87ddf3fc007508f48 = L.map(\n",
+       "                &quot;map_f8eed7972ffd2ac87ddf3fc007508f48&quot;,\n",
        "                {\n",
        "                    center: [48.56851844444444, 2.2518703333333336],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -243,124 +243,124 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_3146a9c1043db525010a6b7ba476d540 = L.tileLayer(\n",
+       "            var tile_layer_95bb5fea1440bc8a9c016c87487bf042 = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 19, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_3146a9c1043db525010a6b7ba476d540.addTo(map_4fa727915a2331dbff37a83c649441d0);\n",
+       "            tile_layer_95bb5fea1440bc8a9c016c87487bf042.addTo(map_f8eed7972ffd2ac87ddf3fc007508f48);\n",
        "        \n",
        "    \n",
-       "            var marker_b15369057b2f7f07f3563d2e3847c588 = L.marker(\n",
+       "            var marker_be3b746cf9a4b284cdec7b6d62b623e9 = L.marker(\n",
        "                [48.718, 2.397],\n",
        "                {}\n",
-       "            ).addTo(map_4fa727915a2331dbff37a83c649441d0);\n",
+       "            ).addTo(map_f8eed7972ffd2ac87ddf3fc007508f48);\n",
        "        \n",
        "    \n",
-       "            var icon_a880ae61384be980f74f5d7dff8d2c77 = L.AwesomeMarkers.icon(\n",
+       "            var icon_bf2f38943adc967f39a0d090df1bf4f0 = L.AwesomeMarkers.icon(\n",
        "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;cloud&quot;, &quot;iconColor&quot;: &quot;white&quot;, &quot;markerColor&quot;: &quot;black&quot;, &quot;prefix&quot;: &quot;glyphicon&quot;}\n",
        "            );\n",
-       "            marker_b15369057b2f7f07f3563d2e3847c588.setIcon(icon_a880ae61384be980f74f5d7dff8d2c77);\n",
+       "            marker_be3b746cf9a4b284cdec7b6d62b623e9.setIcon(icon_bf2f38943adc967f39a0d090df1bf4f0);\n",
        "        \n",
        "    \n",
-       "            var marker_bcff108eca4e9f1befd27fcb354ef9f5 = L.marker(\n",
+       "            var marker_7da519bdbb1f8cf3948d67e379374fd6 = L.marker(\n",
        "                [48.3255, 2.381167],\n",
        "                {}\n",
-       "            ).addTo(map_4fa727915a2331dbff37a83c649441d0);\n",
+       "            ).addTo(map_f8eed7972ffd2ac87ddf3fc007508f48);\n",
        "        \n",
        "    \n",
-       "            var icon_b8efe642a4878abd3ec631d472e0211e = L.AwesomeMarkers.icon(\n",
+       "            var icon_194e627aa30e6375b02fea87711627d2 = L.AwesomeMarkers.icon(\n",
        "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;cloud&quot;, &quot;iconColor&quot;: &quot;white&quot;, &quot;markerColor&quot;: &quot;black&quot;, &quot;prefix&quot;: &quot;glyphicon&quot;}\n",
        "            );\n",
-       "            marker_bcff108eca4e9f1befd27fcb354ef9f5.setIcon(icon_b8efe642a4878abd3ec631d472e0211e);\n",
+       "            marker_7da519bdbb1f8cf3948d67e379374fd6.setIcon(icon_194e627aa30e6375b02fea87711627d2);\n",
        "        \n",
        "    \n",
-       "            var marker_58c8e77f57bda843f7d8ca73df815cf4 = L.marker(\n",
+       "            var marker_99f524ccb36328382b0f4b370565f44f = L.marker(\n",
        "                [48.6005, 2.326],\n",
        "                {}\n",
-       "            ).addTo(map_4fa727915a2331dbff37a83c649441d0);\n",
+       "            ).addTo(map_f8eed7972ffd2ac87ddf3fc007508f48);\n",
        "        \n",
        "    \n",
-       "            var icon_353b24a24a204459b0f6075609c4c6c2 = L.AwesomeMarkers.icon(\n",
+       "            var icon_b72d6393c48d0d3b3e31597f7efde72f = L.AwesomeMarkers.icon(\n",
        "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;cloud&quot;, &quot;iconColor&quot;: &quot;white&quot;, &quot;markerColor&quot;: &quot;black&quot;, &quot;prefix&quot;: &quot;glyphicon&quot;}\n",
        "            );\n",
-       "            marker_58c8e77f57bda843f7d8ca73df815cf4.setIcon(icon_353b24a24a204459b0f6075609c4c6c2);\n",
+       "            marker_99f524ccb36328382b0f4b370565f44f.setIcon(icon_b72d6393c48d0d3b3e31597f7efde72f);\n",
        "        \n",
        "    \n",
-       "            var marker_bf880b6b82f4b3d10458cc7c1c32c742 = L.marker(\n",
+       "            var marker_c1c703dc0b5c50b5d15e2b0eaf7cfd48 = L.marker(\n",
        "                [48.421833, 2.374333],\n",
        "                {}\n",
-       "            ).addTo(map_4fa727915a2331dbff37a83c649441d0);\n",
+       "            ).addTo(map_f8eed7972ffd2ac87ddf3fc007508f48);\n",
        "        \n",
        "    \n",
-       "            var icon_b6f5c169bc508341a9366dee34c99a74 = L.AwesomeMarkers.icon(\n",
+       "            var icon_739966d5b22bffbdc37bb498e96b727a = L.AwesomeMarkers.icon(\n",
        "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;cloud&quot;, &quot;iconColor&quot;: &quot;white&quot;, &quot;markerColor&quot;: &quot;black&quot;, &quot;prefix&quot;: &quot;glyphicon&quot;}\n",
        "            );\n",
-       "            marker_bf880b6b82f4b3d10458cc7c1c32c742.setIcon(icon_b6f5c169bc508341a9366dee34c99a74);\n",
+       "            marker_c1c703dc0b5c50b5d15e2b0eaf7cfd48.setIcon(icon_739966d5b22bffbdc37bb498e96b727a);\n",
        "        \n",
        "    \n",
-       "            var marker_d2336d26ff36127db04818f0ec498bdc = L.marker(\n",
+       "            var marker_34dfce7125ff546f4ea5cc5492d0c525 = L.marker(\n",
        "                [48.526167, 1.993],\n",
        "                {}\n",
-       "            ).addTo(map_4fa727915a2331dbff37a83c649441d0);\n",
+       "            ).addTo(map_f8eed7972ffd2ac87ddf3fc007508f48);\n",
        "        \n",
        "    \n",
-       "            var icon_af8fcb13a9ac0e21b51a7ae344fa62c8 = L.AwesomeMarkers.icon(\n",
+       "            var icon_3fa006af1415e381f28bf6382959ecbb = L.AwesomeMarkers.icon(\n",
        "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;cloud&quot;, &quot;iconColor&quot;: &quot;white&quot;, &quot;markerColor&quot;: &quot;black&quot;, &quot;prefix&quot;: &quot;glyphicon&quot;}\n",
        "            );\n",
-       "            marker_d2336d26ff36127db04818f0ec498bdc.setIcon(icon_af8fcb13a9ac0e21b51a7ae344fa62c8);\n",
+       "            marker_34dfce7125ff546f4ea5cc5492d0c525.setIcon(icon_3fa006af1415e381f28bf6382959ecbb);\n",
        "        \n",
        "    \n",
-       "            var marker_d7bc322004ef527b1f6da9bccaa61f6a = L.marker(\n",
+       "            var marker_91bf849ef7f5d7f40a9d213370614a27 = L.marker(\n",
        "                [48.676833, 2.135833],\n",
        "                {}\n",
-       "            ).addTo(map_4fa727915a2331dbff37a83c649441d0);\n",
+       "            ).addTo(map_f8eed7972ffd2ac87ddf3fc007508f48);\n",
        "        \n",
        "    \n",
-       "            var icon_bb10b719738a7c41d10fec3f9acd1857 = L.AwesomeMarkers.icon(\n",
+       "            var icon_a955014214fa438a1faed6def6115acd = L.AwesomeMarkers.icon(\n",
        "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;cloud&quot;, &quot;iconColor&quot;: &quot;white&quot;, &quot;markerColor&quot;: &quot;black&quot;, &quot;prefix&quot;: &quot;glyphicon&quot;}\n",
        "            );\n",
-       "            marker_d7bc322004ef527b1f6da9bccaa61f6a.setIcon(icon_bb10b719738a7c41d10fec3f9acd1857);\n",
+       "            marker_91bf849ef7f5d7f40a9d213370614a27.setIcon(icon_a955014214fa438a1faed6def6115acd);\n",
        "        \n",
        "    \n",
-       "            var marker_7854ffffab5731a1afb8779bf50f081b = L.marker(\n",
+       "            var marker_6a47697bfdb27825a493aad0b17461ad = L.marker(\n",
        "                [48.382167, 2.431833],\n",
        "                {}\n",
-       "            ).addTo(map_4fa727915a2331dbff37a83c649441d0);\n",
+       "            ).addTo(map_f8eed7972ffd2ac87ddf3fc007508f48);\n",
        "        \n",
        "    \n",
-       "            var icon_57341c1f700e80dfc0ea5efef8f60d12 = L.AwesomeMarkers.icon(\n",
+       "            var icon_dd21765ede899b68d05dc5f4e3baec60 = L.AwesomeMarkers.icon(\n",
        "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;cloud&quot;, &quot;iconColor&quot;: &quot;white&quot;, &quot;markerColor&quot;: &quot;black&quot;, &quot;prefix&quot;: &quot;glyphicon&quot;}\n",
        "            );\n",
-       "            marker_7854ffffab5731a1afb8779bf50f081b.setIcon(icon_57341c1f700e80dfc0ea5efef8f60d12);\n",
+       "            marker_6a47697bfdb27825a493aad0b17461ad.setIcon(icon_dd21765ede899b68d05dc5f4e3baec60);\n",
        "        \n",
        "    \n",
-       "            var marker_ff4c1abae9323bb75da47407c95990aa = L.marker(\n",
+       "            var marker_d5994cc47fb7ecff860a92aaeb35f9de = L.marker(\n",
        "                [48.730333, 2.1115],\n",
        "                {}\n",
-       "            ).addTo(map_4fa727915a2331dbff37a83c649441d0);\n",
+       "            ).addTo(map_f8eed7972ffd2ac87ddf3fc007508f48);\n",
        "        \n",
        "    \n",
-       "            var icon_9dece7f08c13d68f46842d84f91b3bdc = L.AwesomeMarkers.icon(\n",
+       "            var icon_2fb833bafada9434d9c0417c71663878 = L.AwesomeMarkers.icon(\n",
        "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;cloud&quot;, &quot;iconColor&quot;: &quot;white&quot;, &quot;markerColor&quot;: &quot;black&quot;, &quot;prefix&quot;: &quot;glyphicon&quot;}\n",
        "            );\n",
-       "            marker_ff4c1abae9323bb75da47407c95990aa.setIcon(icon_9dece7f08c13d68f46842d84f91b3bdc);\n",
+       "            marker_d5994cc47fb7ecff860a92aaeb35f9de.setIcon(icon_2fb833bafada9434d9c0417c71663878);\n",
        "        \n",
        "    \n",
-       "            var marker_1f398592dc1f4665a3489c0ef9b3451c = L.marker(\n",
+       "            var marker_6fc21db363ec037643071f8e3b937924 = L.marker(\n",
        "                [48.735333, 2.116167],\n",
        "                {}\n",
-       "            ).addTo(map_4fa727915a2331dbff37a83c649441d0);\n",
+       "            ).addTo(map_f8eed7972ffd2ac87ddf3fc007508f48);\n",
        "        \n",
        "    \n",
-       "            var icon_20ce38f46c78b924650e8120b5c375e5 = L.AwesomeMarkers.icon(\n",
+       "            var icon_aebe5be4870bd13224dd821cf981d5bb = L.AwesomeMarkers.icon(\n",
        "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;cloud&quot;, &quot;iconColor&quot;: &quot;white&quot;, &quot;markerColor&quot;: &quot;black&quot;, &quot;prefix&quot;: &quot;glyphicon&quot;}\n",
        "            );\n",
-       "            marker_1f398592dc1f4665a3489c0ef9b3451c.setIcon(icon_20ce38f46c78b924650e8120b5c375e5);\n",
+       "            marker_6fc21db363ec037643071f8e3b937924.setIcon(icon_aebe5be4870bd13224dd821cf981d5bb);\n",
        "        \n",
        "    \n",
-       "            map_4fa727915a2331dbff37a83c649441d0.fitBounds(\n",
+       "            map_f8eed7972ffd2ac87ddf3fc007508f48.fitBounds(\n",
        "                [[48.3255, 1.993], [48.735333, 2.431833]],\n",
        "                {}\n",
        "            );\n",
@@ -369,10 +369,10 @@
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x7f6bf576dd30>"
+       "<folium.folium.Map at 0x7f39351e4800>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
