--- a/data.ipynb
+++ b/data.ipynb
@@ -2,14 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import fonctions as f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_io.StringIO object at 0x7f24a2b06a40>\n"
+      "<_io.StringIO object at 0x7fb8e67e7a00>\n"
      ]
     }
    ],
@@ -22,219 +31,26 @@
     "\n",
     "\n",
     "\n",
-    "data = StringIO(station.text)\n",
+    "data = f.StringIO(station.text)\n",
     "print(data)\n",
-    "df = pd.read_csv(data,sep=';')\n"
+    "df = f.pd.read_csv(data,sep=';')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Id_station</th>\n",
-       "      <th>Id_omm</th>\n",
-       "      <th>Nom_usuel</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "      <th>Altitude</th>\n",
-       "      <th>Date_ouverture</th>\n",
-       "      <th>Pack</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1014002</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ARBENT</td>\n",
-       "      <td>46.278167</td>\n",
-       "      <td>5.669000</td>\n",
-       "      <td>534</td>\n",
-       "      <td>2003-10-01</td>\n",
-       "      <td>RADOME</td>\n",
-       "      <td>POINT (5.669 46.27817)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1027003</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>BALAN_AERO</td>\n",
-       "      <td>45.833000</td>\n",
-       "      <td>5.106667</td>\n",
-       "      <td>196</td>\n",
-       "      <td>2014-05-26</td>\n",
-       "      <td>ETENDU</td>\n",
-       "      <td>POINT (5.10667 45.833)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1034004</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>BELLEY</td>\n",
-       "      <td>45.769333</td>\n",
-       "      <td>5.688000</td>\n",
-       "      <td>330</td>\n",
-       "      <td>2001-09-13</td>\n",
-       "      <td>RADOME</td>\n",
-       "      <td>POINT (5.688 45.76933)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1064001</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>VERIZIEU</td>\n",
-       "      <td>45.777167</td>\n",
-       "      <td>5.487167</td>\n",
-       "      <td>281</td>\n",
-       "      <td>2015-01-01</td>\n",
-       "      <td>ETENDU</td>\n",
-       "      <td>POINT (5.48717 45.77717)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1071001</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>CESSY</td>\n",
-       "      <td>46.310333</td>\n",
-       "      <td>6.080333</td>\n",
-       "      <td>507</td>\n",
-       "      <td>2002-05-01</td>\n",
-       "      <td>RADOME</td>\n",
-       "      <td>POINT (6.08033 46.31033)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2118</th>\n",
-       "      <td>98832004</td>\n",
-       "      <td>91588.0</td>\n",
-       "      <td>MTGNE SOURCES</td>\n",
-       "      <td>-22.143833</td>\n",
-       "      <td>166.593167</td>\n",
-       "      <td>773</td>\n",
-       "      <td>1989-08-01</td>\n",
-       "      <td>ETENDU</td>\n",
-       "      <td>POINT (166.59317 -22.14383)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2119</th>\n",
-       "      <td>98832005</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>OUINNE</td>\n",
-       "      <td>-21.984000</td>\n",
-       "      <td>166.680500</td>\n",
-       "      <td>54</td>\n",
-       "      <td>1974-01-01</td>\n",
-       "      <td>ETENDU</td>\n",
-       "      <td>POINT (166.6805 -21.984)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2120</th>\n",
-       "      <td>98832006</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>RIVIERE BLANCHE</td>\n",
-       "      <td>-22.132667</td>\n",
-       "      <td>166.726333</td>\n",
-       "      <td>171</td>\n",
-       "      <td>2000-11-01</td>\n",
-       "      <td>ETENDU</td>\n",
-       "      <td>POINT (166.72633 -22.13267)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2121</th>\n",
-       "      <td>98832101</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>GORO_ANCIENNE_PEPINIERE</td>\n",
-       "      <td>-22.269167</td>\n",
-       "      <td>166.967500</td>\n",
-       "      <td>298</td>\n",
-       "      <td>1995-01-01</td>\n",
-       "      <td>ETENDU</td>\n",
-       "      <td>POINT (166.9675 -22.26917)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2122</th>\n",
-       "      <td>98833002</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>MEA</td>\n",
-       "      <td>-21.455500</td>\n",
-       "      <td>165.767333</td>\n",
-       "      <td>571</td>\n",
-       "      <td>1988-01-01</td>\n",
-       "      <td>ETENDU</td>\n",
-       "      <td>POINT (165.76733 -21.4555)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2123 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Id_station   Id_omm                Nom_usuel   Latitude   Longitude  \\\n",
-       "0        1014002      NaN                   ARBENT  46.278167    5.669000   \n",
-       "1        1027003      NaN               BALAN_AERO  45.833000    5.106667   \n",
-       "2        1034004      NaN                   BELLEY  45.769333    5.688000   \n",
-       "3        1064001      NaN                 VERIZIEU  45.777167    5.487167   \n",
-       "4        1071001      NaN                    CESSY  46.310333    6.080333   \n",
-       "...          ...      ...                      ...        ...         ...   \n",
-       "2118    98832004  91588.0            MTGNE SOURCES -22.143833  166.593167   \n",
-       "2119    98832005      NaN                   OUINNE -21.984000  166.680500   \n",
-       "2120    98832006      NaN          RIVIERE BLANCHE -22.132667  166.726333   \n",
-       "2121    98832101      NaN  GORO_ANCIENNE_PEPINIERE -22.269167  166.967500   \n",
-       "2122    98833002      NaN                      MEA -21.455500  165.767333   \n",
-       "\n",
-       "      Altitude Date_ouverture    Pack                     geometry  \n",
-       "0          534     2003-10-01  RADOME       POINT (5.669 46.27817)  \n",
-       "1          196     2014-05-26  ETENDU       POINT (5.10667 45.833)  \n",
-       "2          330     2001-09-13  RADOME       POINT (5.688 45.76933)  \n",
-       "3          281     2015-01-01  ETENDU     POINT (5.48717 45.77717)  \n",
-       "4          507     2002-05-01  RADOME     POINT (6.08033 46.31033)  \n",
-       "...        ...            ...     ...                          ...  \n",
-       "2118       773     1989-08-01  ETENDU  POINT (166.59317 -22.14383)  \n",
-       "2119        54     1974-01-01  ETENDU     POINT (166.6805 -21.984)  \n",
-       "2120       171     2000-11-01  ETENDU  POINT (166.72633 -22.13267)  \n",
-       "2121       298     1995-01-01  ETENDU   POINT (166.9675 -22.26917)  \n",
-       "2122       571     1988-01-01  ETENDU   POINT (165.76733 -21.4555)  \n",
-       "\n",
-       "[2123 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'gpd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m gdf \u001b[38;5;241m=\u001b[39m \u001b[43mgpd\u001b[49m\u001b[38;5;241m.\u001b[39mGeoDataFrame(\n\u001b[1;32m      2\u001b[0m     df, geometry\u001b[38;5;241m=\u001b[39mgpd\u001b[38;5;241m.\u001b[39mpoints_from_xy(df\u001b[38;5;241m.\u001b[39mLongitude, df\u001b[38;5;241m.\u001b[39mLatitude), crs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4326\u001b[39m\n\u001b[1;32m      3\u001b[0m )\n\u001b[1;32m      4\u001b[0m gdf\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'gpd' is not defined"
+     ]
     }
    ],
    "source": [
