--- a/Ana_exploratoire.ipynb
+++ b/Ana_exploratoire.ipynb
@@ -2,29 +2,410 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Data Visualisation Libraries\n",
-    "import matplotlib.pyplot as plt\n",
-    "#%config InlineBackend.figure_format = 'retina'\n",
-    "\n",
-    "#!pip install seaborn --upgrade\n",
-    "import seaborn as sns\n",
-    "#sns.set_style('darkgrid')"
+    "import fonctions as f"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>RR</th>\n",
+       "      <th>DRR</th>\n",
+       "      <th>TN</th>\n",
+       "      <th>HTN</th>\n",
+       "      <th>TX</th>\n",
+       "      <th>HTX</th>\n",
+       "      <th>TM</th>\n",
+       "      <th>TMNX</th>\n",
+       "      <th>TNSOL</th>\n",
+       "      <th>...</th>\n",
+       "      <th>BRUME</th>\n",
+       "      <th>ECLAIR</th>\n",
+       "      <th>ETPMON</th>\n",
+       "      <th>ETPGRILLE</th>\n",
+       "      <th>UV</th>\n",
+       "      <th>TMERMAX</th>\n",
+       "      <th>TMERMIN</th>\n",
+       "      <th>HNEIGEF</th>\n",
+       "      <th>NEIGETOTX</th>\n",
+       "      <th>NEIGETOT06</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>POSTE</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1014002</th>\n",
+       "      <td>20230105</td>\n",
+       "      <td>3,4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6,9</td>\n",
+       "      <td>1816.0</td>\n",
+       "      <td>10,8</td>\n",
+       "      <td>1331.0</td>\n",
+       "      <td>8,7</td>\n",
+       "      <td>8,85</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0,1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1014002</th>\n",
+       "      <td>20230106</td>\n",
+       "      <td>0,0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5,6</td>\n",
+       "      <td>814.0</td>\n",
+       "      <td>8,6</td>\n",
+       "      <td>1159.0</td>\n",
+       "      <td>7,2</td>\n",
+       "      <td>7,10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0,3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1014002</th>\n",
+       "      <td>20230107</td>\n",
+       "      <td>8,0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6,7</td>\n",
+       "      <td>2209.0</td>\n",
+       "      <td>13,8</td>\n",
+       "      <td>1241.0</td>\n",
+       "      <td>10,1</td>\n",
+       "      <td>10,25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1,7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1014002</th>\n",
+       "      <td>20230108</td>\n",
+       "      <td>17,8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7,3</td>\n",
+       "      <td>455.0</td>\n",
+       "      <td>10,7</td>\n",
+       "      <td>1300.0</td>\n",
+       "      <td>9,1</td>\n",
+       "      <td>9,00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0,6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1014002</th>\n",
+       "      <td>20230109</td>\n",
+       "      <td>9,6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1,6</td>\n",
+       "      <td>1302.0</td>\n",
+       "      <td>5,0</td>\n",
+       "      <td>1150.0</td>\n",
+       "      <td>4,0</td>\n",
+       "      <td>3,30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0,2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1014002</th>\n",
+       "      <td>20241027</td>\n",
+       "      <td>0,2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5,7</td>\n",
+       "      <td>633.0</td>\n",
+       "      <td>21,9</td>\n",
+       "      <td>1354.0</td>\n",
+       "      <td>13,3</td>\n",
+       "      <td>13,80</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1,1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1014002</th>\n",
+       "      <td>20241028</td>\n",
+       "      <td>0,2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6,7</td>\n",
+       "      <td>546.0</td>\n",
+       "      <td>21,9</td>\n",
+       "      <td>1236.0</td>\n",
+       "      <td>12,6</td>\n",
+       "      <td>14,30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1,3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1014002</th>\n",
+       "      <td>20241029</td>\n",
+       "      <td>0,4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6,4</td>\n",
+       "      <td>2251.0</td>\n",
+       "      <td>21,7</td>\n",
+       "      <td>1236.0</td>\n",
+       "      <td>12,0</td>\n",
+       "      <td>14,05</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1,1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1014002</th>\n",
+       "      <td>20241030</td>\n",
+       "      <td>0,2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4,9</td>\n",
+       "      <td>632.0</td>\n",
+       "      <td>21,8</td>\n",
+       "      <td>1253.0</td>\n",
+       "      <td>11,0</td>\n",
+       "      <td>13,35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1,2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1014002</th>\n",
+       "      <td>20241031</td>\n",
+       "      <td>0,0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2,9</td>\n",
+       "      <td>657.0</td>\n",
+       "      <td>20,2</td>\n",
+       "      <td>1341.0</td>\n",
+       "      <td>9,4</td>\n",
+       "      <td>11,55</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1,2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1022 rows × 68 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             DATE    RR  DRR   TN     HTN    TX     HTX    TM   TMNX  TNSOL  \\\n",
+       "POSTE                                                                         \n",
+       "1014002  20230105   3,4  NaN  6,9  1816.0  10,8  1331.0   8,7   8,85    NaN   \n",
+       "1014002  20230106   0,0  NaN  5,6   814.0   8,6  1159.0   7,2   7,10    NaN   \n",
+       "1014002  20230107   8,0  NaN  6,7  2209.0  13,8  1241.0  10,1  10,25    NaN   \n",
+       "1014002  20230108  17,8  NaN  7,3   455.0  10,7  1300.0   9,1   9,00    NaN   \n",
+       "1014002  20230109   9,6  NaN  1,6  1302.0   5,0  1150.0   4,0   3,30    NaN   \n",
+       "...           ...   ...  ...  ...     ...   ...     ...   ...    ...    ...   \n",
+       "1014002  20241027   0,2  NaN  5,7   633.0  21,9  1354.0  13,3  13,80    NaN   \n",
+       "1014002  20241028   0,2  NaN  6,7   546.0  21,9  1236.0  12,6  14,30    NaN   \n",
+       "1014002  20241029   0,4  NaN  6,4  2251.0  21,7  1236.0  12,0  14,05    NaN   \n",
+       "1014002  20241030   0,2  NaN  4,9   632.0  21,8  1253.0  11,0  13,35    NaN   \n",
+       "1014002  20241031   0,0  NaN  2,9   657.0  20,2  1341.0   9,4  11,55    NaN   \n",
+       "\n",
+       "         ...  BRUME  ECLAIR ETPMON ETPGRILLE  UV  TMERMAX TMERMIN HNEIGEF  \\\n",
+       "POSTE    ...                                                                \n",
+       "1014002  ...    NaN     NaN    NaN       0,1 NaN      NaN     NaN     NaN   \n",
+       "1014002  ...    NaN     NaN    NaN       0,3 NaN      NaN     NaN     NaN   \n",
+       "1014002  ...    NaN     NaN    NaN       1,7 NaN      NaN     NaN     NaN   \n",
+       "1014002  ...    NaN     NaN    NaN       0,6 NaN      NaN     NaN     NaN   \n",
+       "1014002  ...    NaN     NaN    NaN       0,2 NaN      NaN     NaN     NaN   \n",
+       "...      ...    ...     ...    ...       ...  ..      ...     ...     ...   \n",
+       "1014002  ...    NaN     NaN    NaN       1,1 NaN      NaN     NaN     NaN   \n",
+       "1014002  ...    NaN     NaN    NaN       1,3 NaN      NaN     NaN     NaN   \n",
+       "1014002  ...    NaN     NaN    NaN       1,1 NaN      NaN     NaN     NaN   \n",
+       "1014002  ...    NaN     NaN    NaN       1,2 NaN      NaN     NaN     NaN   \n",
+       "1014002  ...    NaN     NaN    NaN       1,2 NaN      NaN     NaN     NaN   \n",
+       "\n",
+       "         NEIGETOTX  NEIGETOT06  \n",
+       "POSTE                           \n",
+       "1014002        0.0         0.0  \n",
+       "1014002        0.0         0.0  \n",
+       "1014002        0.0         0.0  \n",
+       "1014002        0.0         0.0  \n",
+       "1014002        0.0         0.0  \n",
+       "...            ...         ...  \n",
+       "1014002        0.0         0.0  \n",
+       "1014002        0.0         0.0  \n",
+       "1014002        0.0         0.0  \n",
+       "1014002        0.0         0.0  \n",
+       "1014002        0.0         0.0  \n",
+       "\n",
+       "[1022 rows x 68 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.read_csv(\"data.csv\", index_col=0)\n"
+    "df = f.pd.read_csv(\"data.csv\", index_col=0)\n",
+    "df\n"
    ]
   }
  ],
