--- a/data.ipynb
+++ b/data.ipynb
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +782,21 @@
       "<Response [201]>\n",
       "<_io.StringIO object at 0x7f235a447100>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7f235a447100>\n"
+      "<_io.StringIO object at 0x7f235a447100>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f235a447100>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f235a447280>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f235a447280>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f235a447280>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f235a447280>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f235a447280>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f235a447280>\n"
      ]
     }
    ],
@@ -794,9 +808,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f235a447340>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f235a447340>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f235a447340>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f235a447340>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f235a447340>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f235a447340>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f235a447b80>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f235a447b80>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f235a447b80>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f235a447b80>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f235a4474c0>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f235a4474c0>\n"
+     ]
+    }
+   ],
    "source": [
     "data2023=f.pd.DataFrame()\n",
     "for i in range(len(matrix2023)):\n",
@@ -843,29 +888,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'data2023' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m datameteo\u001b[38;5;241m=\u001b[39mf\u001b[38;5;241m.\u001b[39mpd\u001b[38;5;241m.\u001b[39mconcat([data2022,\u001b[43mdata2023\u001b[49m], ignore_index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      2\u001b[0m datameteo\u001b[38;5;241m=\u001b[39mf\u001b[38;5;241m.\u001b[39mpd\u001b[38;5;241m.\u001b[39mconcat([datameteo,data2024], ignore_index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'data2023' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "datameteo=f.pd.concat([data2022,data2023], ignore_index=True)\n",
-    "datameteo=f.pd.concat([datameteo,data2024], ignore_index=True)"
+    "datameteo=f.pd.concat([datameteo,data2024], ignore_index=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
